# Chess2.com

./: .gitignore  CMakeLists.txt  LICENSE
Client/: CMakeLists.txt
Client/src/: main.cpp
Core/: CMakeLists.txt
Core/include/Chess/Core/: coreTest.h
Core/include/Chess/Core/Game/: test.h
Core/include/Chess/Core/Networking/: Message.h  Message.hpp
Core/src/: coreTest.cpp
Core/src/Game/: test.cpp
Server/: CMakeLists.txt
Server/include/Chess/Server/: GameServer.h  GameServer.hpp  Session.h  Target.h
Server/include/Chess/Server/Networking/: Session.hpp  SessionPool.hpp  Target.hpp
Server/include/Chess/Server/Session/: Session.h  Session.hpp  SessionPool.h  SessionPool.hpp  Target.hpp
Server/src/: main.cpp
Server/src/Server/: GameServer.cpp  Session.cpp  SessionPool.cpp  main.cpp
Server/src/Server/Networking/: Session.cpp  SessionPool.cpp
Server/src/Server/Session/: SessionPool.cpp
cmake/: ChessPackaging.cmake  HelperFunctions.cmake  LICENSE.rtf
